--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Index.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Index.cshtml
@@ -119,7 +119,7 @@
         }
 
         function loadDeleteFile() {
-            showPopupAlert("آیا مطمئن هستید که این فایل پاک شود", '$("#delete_file_form").submit();', '');
+            showPopupAlert("آیا مطمئن هستید که این فایل پاک شود؟", '$("#delete_file_form").submit();', '');
         }
 
         function onDeleteFileError() {
