--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/List.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/List.cshtml
@@ -34,6 +34,7 @@
         </table>
         if (ViewBag.Paging != null)
         {
+            <div class=divider-blank30></div>
             @Html.Partial("Paging", (PagingModel)ViewBag.Paging)
         }
     }
