--- a/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/palette.less
@@ -41,6 +41,7 @@
 /* Admin Colors */
 @mint1Color: #47cfad;
 @mint2Color: #37bc98;
+@mintDirtyColor: #7accc8;
 @bitterSweet1Color: #fc6e51;
 @bitterSweet2Color: #e9573f;
 @orangeColor: #f39c12;
