--- a/Squirrel/Squirrel.Web/Views/Shared/_Header.cshtml
+++ b/Squirrel/Squirrel.Web/Views/Shared/_Header.cshtml
@@ -30,3 +30,9 @@
         </div>
     </div>
 </div>
+
+<div class="popup-con">
+    <div class="image-box">
+        <img src="" />
+    </div>
+</div>
