--- a/Squirrel/Squirrel.Web/Areas/Admin/Views/Users/ResetPassword.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Admin/Views/Users/ResetPassword.cshtml
@@ -1,31 +1,33 @@
 ﻿@model Squirrel.Domain.ViewModels.UserResetPasswordModel
 
-<h4>تغییر پسورد کاربر</h4>
+<div class="topic-row">
+    تغییر پسورد
+</div>
+<div class="divider-blank15"></div>
 
-@Html.Partial("_Message")
-
-@using (Ajax.BeginForm("ResetPassword", "Users", null, new AjaxOptions { UpdateTargetId = "option_con_2" }, new { id = "user_details_form" }))
+@using (Ajax.BeginForm("ResetPassword", "Users", null,
+    new AjaxOptions { OnFailure = "onResetPassUserError", OnSuccess = "onResetPassUserSuccess" },
+    new { id = "user_resetpass_form" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
 
-
-
-    <p class="form-group">
+    <div class="form-row">
         @Html.LabelFor(m => m.Password)
-        <br />
-        @Html.TextBoxFor(m => m.Password)
-        @Html.ValidationMessageFor(m => m.Password)
-    </p>
-
-    <p>
-        <button type="submit" class="btn btn-default">ذخیره</button>
-        <button type="button" class="btn btn-default" onclick="$('#option_con_2').html('');">انصراف</button>
-    </p>
+        @Html.TextBoxFor(m => m.Password, new { @class = "textbox small" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.Password)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div>
+        <button type="submit" class="button small submit">ثبت</button>
+        <a class="button small" onclick="restoreSecondryContent()">انصراف</a>
+    </div>
 }
 
 <script type="text/javascript">
     $(function () {
-        $.validator.unobtrusive.parse("#user_details_form");
+        $.validator.unobtrusive.parse("#user_resetpass_form");
     })
 </script>
