--- a/Squirrel/Squirrel.Web/Content/themes/vone/main.css
+++ b/Squirrel/Squirrel.Web/Content/themes/vone/main.css
@@ -411,6 +411,31 @@ html a:focus {
 .message-box.success .msg-text {
   color: #636363;
 }
+.popup-con {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 200;
+  display: none;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.popup-con.showed {
+  display: flex;
+}
+.popup-con .image-box {
+  text-align: center;
+  margin: 30px;
+  display: none;
+}
+.popup-con .image-box img {
+  max-width: 100%;
+}
 /* ------ */
 body > .container,
 body > .overheader > .container {
@@ -1296,6 +1321,38 @@ body .overheader .container .header-container .header-search .siteglyphbox {
   color: #b7b7b7;
   line-height: 20px;
   padding-bottom: 10px;
+}
+.issuepage-posts .comments .comment .parent {
+  font-size: .7em;
+  font-style: italic;
+  background-color: #f5f5f5;
+  color: #898989;
+  padding: 10px 20px;
+  margin-bottom: 15px;
+  border-radius: 2px;
+  line-height: 22px;
+  max-height: 97px;
+  overflow: hidden;
+  position: relative;
+}
+.issuepage-posts .comments .comment .parent:before {
+  content: "";
+  position: absolute;
+  top: auto;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: 15px;
+  /* Safari 4-5, Chrome 1-9 */
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f5f5f5), to(transparent));
+  /* Safari 5.1, Chrome 10+ */
+  background: -webkit-linear-gradient(top, transparent, #f5f5f5);
+  /* Firefox 3.6+ */
+  background: -moz-linear-gradient(top, transparent, #f5f5f5);
+  /* IE 10 */
+  background: -ms-linear-gradient(top, transparent, #f5f5f5);
+  /* Opera 11.10+ */
+  background: -o-linear-gradient(top, transparent, #f5f5f5);
 }
 .issuepage-posts .comments .comment .content {
   font-size: .9em;
